--- a/nucleof072rb/nucleof072rb.ioc
+++ b/nucleof072rb/nucleof072rb.ioc
@@ -169,7 +169,9 @@ SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM1.IPParameters=Channel-PWM Generation1 CH1
+TIM1.IPParameters=Channel-PWM Generation1 CH1,Pulse-PWM Generation1 CH1,Prescaler
+TIM1.Prescaler=14
+TIM1.Pulse-PWM\ Generation1\ CH1=0
 USART2.IPParameters=VirtualMode,VirtualMode-Asynchronous
 USART2.VirtualMode=VM_ASYNC
 USART2.VirtualMode-Asynchronous=VM_ASYNC
